# DiarioAlimentare

./: .gitignore  MIGRAZIONE_SUPABASE.md  README.md  SUPABASE_SETUP.md  debug_test.py  diarioalimentare.sqlite  env.example  migrate_to_supabase.py  pyproject.toml  requirements.txt  test_database.py
src/: main.py
src/database/: README.md  diario_alimentare.py  migrate_db.py
src/diarioalimentare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
