[project]
name = "diarioalimentare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
    "xlsxwriter>=3.2.3",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
